fixed: layout bugs

--- a/src/pages/ProjectPage/ProjectPage.scss
+++ b/src/pages/ProjectPage/ProjectPage.scss
@@ -10,8 +10,15 @@
   position: relative;
   // overflow-y: hidden;
 
-  .item-title{
+  .item-heading{
     height: 40vh;
+    h2{
+      font-size: 3vw;
+      font-weight: 400;
+    }
+    .item-title{
+      
+    }
   }
 
   .container{
@@ -26,6 +33,7 @@
       img{
         width: 100%;
         height: 100%;
+        filter: brightness(75%);
       }
     }
     
